--- a/recipes/botan/all/test_v1_package/CMakeLists.txt
+++ b/recipes/botan/all/test_v1_package/CMakeLists.txt
@@ -8,4 +8,8 @@ find_package(botan REQUIRED CONFIG)
 
 add_executable(${PROJECT_NAME} test_package.cpp)
 target_link_libraries(${PROJECT_NAME} botan::botan)
-set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
+if(botan_VERSION_STRING VERSION_LESS "3.0.0")
+    target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_11)
+else()
+    target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
+endif()
