--- a/recipes/coin-cbc/all/test_package/CMakeLists.txt
+++ b/recipes/coin-cbc/all/test_package/CMakeLists.txt
@@ -1,11 +1,7 @@
-cmake_minimum_required(VERSION 3.1)
-project(test_package)
-
-include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-conan_basic_setup()
+cmake_minimum_required(VERSION 3.15)
+project(test_package LANGUAGES CXX)
 
 include(FindPkgConfig)
-
 pkg_check_modules(OsiCbc REQUIRED IMPORTED_TARGET osi-cbc)
 
 add_executable(${PROJECT_NAME} test_package.cpp)
