--- a/recipes/openscenegraph/all/test_package/CMakeLists.txt
+++ b/recipes/openscenegraph/all/test_package/CMakeLists.txt
@@ -1,15 +1,7 @@
-cmake_minimum_required(VERSION 3.1.2)
-project(test_package)
-
-include(${PROJECT_BINARY_DIR}/conanbuildinfo.cmake)
-conan_basic_setup()
+cmake_minimum_required(VERSION 3.15)
+project(test_package LANGUAGES CXX)
 
 find_package(OpenSceneGraph REQUIRED)
-
-include_directories(${OPENSCENEGRAPH_INCLUDE_DIRS})
-link_libraries(${OPENSCENEGRAPH_LIBRARIES})
-add_compile_definitions(${OPENSCENEGRAPH_COMPILE_DEFINITIONS})
-
 
 get_property(cache_variables DIRECTORY PROPERTY CACHE_VARIABLES)
 foreach(cache_variable ${cache_variables})
@@ -19,3 +11,4 @@ foreach(cache_variable ${cache_variables})
 endforeach()
 
 add_executable(${PROJECT_NAME} test_package.cpp)
+target_link_libraries(${PROJECT_NAME} OPENSCENEGRAPH::OPENSCENEGRAPH)
