opencascade: fix compilation when with_tbb=True

--- a/recipes/opencascade/all/conandata.yml
+++ b/recipes/opencascade/all/conandata.yml
@@ -18,6 +18,14 @@ patches:
       patch_description: "Fix compilation error with C++20"
       patch_source: "https://git.dev.opencascade.org/gitweb/?p=occt.git;a=commitdiff;h=73035770f6fced4ec7dc7e6a0276ee894daa479a"
       patch_type: "portability"
+    - patch_file: "patches/7.5.0-0004-fix-compile-errors-onetbb-2021.patch"
+      patch_description: "Fix compilation errors with onetbb 2021"
+      patch_source: "https://git.dev.opencascade.org/gitweb/?p=occt.git;a=commitdiff;h=740833a6a88e481f474783c426b6f6311ed586d3"
+      patch_type: "portability"
+    - patch_file: "patches/7.5.0-0005-fix-link-errors-onetbb-2021.patch"
+      patch_description: "Fix link errors with onetbb 2021"
+      patch_source: "https://git.dev.opencascade.org/gitweb/?p=occt.git;a=commitdiff;h=2923ef0df872d5e3f2d2a4af42d6ead910fec4c2"
+      patch_type: "portability"
   "7.6.0":
     - patch_file: "patches/7.5.0-0001-fix-compile-error-cxx17.patch"
       patch_description: "Fix compilation error with C++17"
@@ -26,6 +34,14 @@ patches:
     - patch_file: "patches/7.5.0-0002-fix-compile-error-cxx20.patch"
       patch_description: "Fix compilation error with C++20"
       patch_source: "https://git.dev.opencascade.org/gitweb/?p=occt.git;a=commitdiff;h=73035770f6fced4ec7dc7e6a0276ee894daa479a"
+      patch_type: "portability"
+    - patch_file: "patches/7.5.0-0004-fix-compile-errors-onetbb-2021.patch"
+      patch_description: "Fix compilation errors with onetbb 2021"
+      patch_source: "https://git.dev.opencascade.org/gitweb/?p=occt.git;a=commitdiff;h=740833a6a88e481f474783c426b6f6311ed586d3"
+      patch_type: "portability"
+    - patch_file: "patches/7.5.0-0005-fix-link-errors-onetbb-2021.patch"
+      patch_description: "Fix link errors with onetbb 2021"
+      patch_source: "https://git.dev.opencascade.org/gitweb/?p=occt.git;a=commitdiff;h=2923ef0df872d5e3f2d2a4af42d6ead910fec4c2"
       patch_type: "portability"
   "7.5.0":
     - patch_file: "patches/7.5.0-0001-fix-compile-error-cxx17.patch"
@@ -39,4 +55,12 @@ patches:
     - patch_file: "patches/7.5.0-0003-undefined-ref-ncollection-lerp.patch"
       patch_description: "Fix undefined reference with Visual Studio 2015"
       patch_source: "https://git.dev.opencascade.org/gitweb/?p=occt.git;a=commitdiff;h=026aec186081397e553e492db1632ee606f01fad"
+      patch_type: "portability"
+    - patch_file: "patches/7.5.0-0004-fix-compile-errors-onetbb-2021.patch"
+      patch_description: "Fix compilation errors with onetbb 2021"
+      patch_source: "https://git.dev.opencascade.org/gitweb/?p=occt.git;a=commitdiff;h=740833a6a88e481f474783c426b6f6311ed586d3"
+      patch_type: "portability"
+    - patch_file: "patches/7.5.0-0005-fix-link-errors-onetbb-2021.patch"
+      patch_description: "Fix link errors with onetbb 2021"
+      patch_source: "https://git.dev.opencascade.org/gitweb/?p=occt.git;a=commitdiff;h=2923ef0df872d5e3f2d2a4af42d6ead910fec4c2"
       patch_type: "portability"
