openimageio: Fix ffmpeg, fix transitive dependency false positives

--- a/recipes/openimageio/all/CMakeLists.txt
+++ b/recipes/openimageio/all/CMakeLists.txt
@@ -6,13 +6,15 @@ set(libs
     Boost
     DCMTK
     FFmpeg
+    fmt
     Freetype
     GIF
     HDF5
     JPEG
-    LibRaw
     Libheif
     libjpeg-turbo
+    LibRaw
+    libsquish
     Nuke
     OpenCV
     OpenColorIO
@@ -21,19 +23,21 @@ set(libs
     OpenVDB
     PNG
     Ptex
+    pugixml
     R3DSDK
     Robinmap
     TBB
     TIFF
     WebP
     ZLIB
-    fmt
-    libsquish
-    pugixml
 )
 foreach(lib IN LISTS libs)
-    find_package(${lib} QUIET CONFIG)
     string(TOUPPER "${lib}" lib_upper)
+    if (DEFINED USE_${lib_upper} AND NOT USE_${lib_upper})
+        message("Skipping ${lib}")
+        continue()
+    endif()
+    find_package(${lib} REQUIRED CONFIG)
     if(${lib}_FOUND)
         set(${lib}_INCLUDE_DIR ${${lib}_INCLUDE_DIRS})
         set(${lib_upper}_FOUND ${${lib}_FOUND})
@@ -42,11 +46,13 @@ foreach(lib IN LISTS libs)
         set(${lib_upper}_LIBRARIES ${${lib}_LIBRARIES})
         set(${lib_upper}_LIBRARY_DIRS ${${lib}_LIBRARY_DIRS})
         set(${lib_upper}_LIBS ${${lib}_LIBS})
+        set(${lib_upper}_DEFINITIONS ${${lib}_DEFINITIONS})
     endif()
 endforeach()
 
 set(LibRaw_r_LIBRARIES ${LibRaw_LIBRARIES})
 set(LibRaw_r_DEFINITIONS ${LibRaw_DEFINITIONS})
+set(FFMPEG_LIBRARIES ffmpeg::ffmpeg)
 
 include_directories(
     ${fmt_INCLUDE_DIRS}
