--- a/recipes/qt/5.x.x/conandata.yml
+++ b/recipes/qt/5.x.x/conandata.yml
@@ -112,7 +112,7 @@ patches:
       base_path: "qt5/qtwebengine"
       patch_description: "Fix build error with binutils >= 2.41"
       patch_type: "portability"
-      patch_source: "https://packages.ubuntu.com/source/focal-updates/qtwebengine-opensource-src"
+      patch_source: "https://trac.ffmpeg.org/ticket/10405"
   "5.15.10":
     - "base_path": "qt5/qtbase"
       "patch_file": "patches/aa2a39dea5.diff"
