--- a/recipes/coin-cbc/all/test_package/CMakeLists.txt
+++ b/recipes/coin-cbc/all/test_package/CMakeLists.txt
@@ -1,10 +1,13 @@
 cmake_minimum_required(VERSION 3.15)
 project(test_package LANGUAGES CXX)
 
-#include(FindPkgConfig)
-#pkg_check_modules(OsiCbc REQUIRED IMPORTED_TARGET osi-cbc)
-#add_executable(${PROJECT_NAME}_pkgconfig test_package.cpp)
-#target_link_libraries(${PROJECT_NAME}_pkgconfig PRIVATE PkgConfig::OsiCbc)
+include(FindPkgConfig)
+# The transitive 'coinutils' is added explicitly to work around the linked library order otherwise being:
+# OsiCbc CbcSolver Cbc bz2 z OsiCommonTests Osi Cgl ClpSolver Clp OsiClp CoinUtils
+# which causes CoinUtils to not find bz2 and z symbols.
+pkg_check_modules(OsiCbc REQUIRED IMPORTED_TARGET osi-cbc coinutils)
+add_executable(${PROJECT_NAME}_pkgconfig test_package.cpp)
+target_link_libraries(${PROJECT_NAME}_pkgconfig PRIVATE PkgConfig::OsiCbc)
 
 find_package(coin-cbc CONFIG REQUIRED)
 add_executable(${PROJECT_NAME}_cmake test_package.cpp)
