--- a/recipes/jemalloc/all/test_package/CMakeLists.txt
+++ b/recipes/jemalloc/all/test_package/CMakeLists.txt
@@ -1,8 +1,7 @@
-cmake_minimum_required(VERSION 3.1)
-project(test_package)
+cmake_minimum_required(VERSION 3.15)
+project(test_package LANGUAGES C)
 
 find_package(jemalloc REQUIRED CONFIG)
 
-add_executable(${PROJECT_NAME} test_package.cpp)
+add_executable(${PROJECT_NAME} test_package.c)
 target_link_libraries(${PROJECT_NAME} PRIVATE jemalloc::jemalloc)
-target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
