In response to review feedback: Change basepath of ffmpeg assembly fix. Add ffmpeg patch also to older 5.15.x releases.

--- a/recipes/qt/5.x.x/conandata.yml
+++ b/recipes/qt/5.x.x/conandata.yml
@@ -108,8 +108,8 @@ patches:
       patch_description: "Fix usage of memory_resource with apple-clang>=15 and deployment target of macOS < 14"
       patch_type: "portability"
       patch_source: "https://codereview.qt-project.org/c/qt/qtbase/+/482392"
-    - patch_file: "patches/ffmpeg-x86-optimization.patch"
-      base_path: "qt5/qtwebengine"
+    - patch_file: "patches/fix_ffmpeg_assembly_for_binutils_2_41.patch"
+      base_path: "qt5/qtwebengine/src/3rdparty/chromium/third_party/ffmpeg"
       patch_description: "Fix build error with binutils >= 2.41"
       patch_type: "portability"
       patch_source: "https://trac.ffmpeg.org/ticket/10405"
@@ -146,6 +146,11 @@ patches:
       patch_description: "Fix usage of memory_resource with apple-clang>=15 and deployment target of macOS < 14"
       patch_type: "portability"
       patch_source: "https://codereview.qt-project.org/c/qt/qtbase/+/482392"
+    - patch_file: "patches/fix_ffmpeg_assembly_for_binutils_2_41.patch"
+      base_path: "qt5/qtwebengine/src/3rdparty/chromium/third_party/ffmpeg"
+      patch_description: "Fix build error with binutils >= 2.41"
+      patch_type: "portability"
+      patch_source: "https://trac.ffmpeg.org/ticket/10405"
   "5.15.9":
     - "base_path": "qt5/qtbase"
       "patch_file": "patches/aa2a39dea5.diff"
@@ -179,6 +184,11 @@ patches:
       patch_description: "Fix usage of memory_resource with apple-clang>=15 and deployment target of macOS < 14"
       patch_type: "portability"
       patch_source: "https://codereview.qt-project.org/c/qt/qtbase/+/482392"
+    - patch_file: "patches/fix_ffmpeg_assembly_for_binutils_2_41.patch"
+      base_path: "qt5/qtwebengine/src/3rdparty/chromium/third_party/ffmpeg"
+      patch_description: "Fix build error with binutils >= 2.41"
+      patch_type: "portability"
+      patch_source: "https://trac.ffmpeg.org/ticket/10405"
   "5.15.8":
     - patch_file: "patches/aa2a39dea5.diff"
       base_path: "qt5/qtbase"
@@ -212,6 +222,11 @@ patches:
       patch_description: "Fix usage of memory_resource with apple-clang>=15 and deployment target of macOS < 14"
       patch_type: "portability"
       patch_source: "https://codereview.qt-project.org/c/qt/qtbase/+/482392"
+    - patch_file: "patches/fix_ffmpeg_assembly_for_binutils_2_41.patch"
+      base_path: "qt5/qtwebengine/src/3rdparty/chromium/third_party/ffmpeg"
+      patch_description: "Fix build error with binutils >= 2.41"
+      patch_type: "portability"
+      patch_source: "https://trac.ffmpeg.org/ticket/10405"
   "5.15.7":
     - patch_file: "patches/337f28c9ab.patch"
       base_path: "qt5/qtbase"
@@ -253,3 +268,8 @@ patches:
       patch_description: "Fix usage of memory_resource with apple-clang>=15 and deployment target of macOS < 14"
       patch_type: "portability"
       patch_source: "https://codereview.qt-project.org/c/qt/qtbase/+/482392"
+    - patch_file: "patches/fix_ffmpeg_assembly_for_binutils_2_41.patch"
+      base_path: "qt5/qtwebengine/src/3rdparty/chromium/third_party/ffmpeg"
+      patch_description: "Fix build error with binutils >= 2.41"
+      patch_type: "portability"
+      patch_source: "https://trac.ffmpeg.org/ticket/10405"
