--- a/recipes/raylib/all/conandata.yml
+++ b/recipes/raylib/all/conandata.yml
@@ -8,6 +8,8 @@ sources:
 patches:
   "4.0.0":
     - patch_file: "patches/4.0.0-0001-enable-cmake-build-android.patch"
+    - patch_file: "patches/4.0.0-0002-fix-glfw-windows.patch"
   "3.5.0":
     - patch_file: "patches/3.5.0-0001-enable-cmake-build-android.patch"
     - patch_file: "patches/3.5.0-0002-cmake-project.patch"
+    - patch_file: "patches/3.5.0-0003-fix-glfw-windows.patch"
