--- a/recipes/cmake/config.yml
+++ b/recipes/cmake/config.yml
@@ -1,4 +1,6 @@
 versions:
+  "3.27.9":
+    folder: "binary"
   "3.27.7":
     folder: "binary"
   "3.27.6":
@@ -6,6 +8,8 @@ versions:
   "3.27.5":
     folder: "binary"
   "3.27.4":
+    folder: "binary"
+  "3.26.6":
     folder: "binary"
   "3.26.5":
     folder: "binary"
