[armadillo] Update find_package to use new Armadillo target

--- a/recipes/armadillo/all/test_package/CMakeLists.txt
+++ b/recipes/armadillo/all/test_package/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
 project(PackageTest CXX)
 
-find_package(armadillo CONFIG REQUIRED)
+find_package(Armadillo CONFIG REQUIRED)
 if (LINK_HDF5)
     find_package(HDF5)
     set(HDF5_TARGETS HDF5::HDF5)
