--- a/recipes/sentry-native/all/conandata.yml
+++ b/recipes/sentry-native/all/conandata.yml
@@ -21,3 +21,27 @@ patches:
       patch_type: "backport"
       patch_description: "Extra header required for gcc13"
       patch_source: "https://chromium-review.googlesource.com/c/chromium/mini_chromium/+/4847514"
+    - patch_file: "patches/0.6.x-0002-install-breakpad-header.patch"
+      patch_description: "Install breakpad header"
+      patch_type: "conan"
+      patch_source: "https://github.com/getsentry/sentry-native/pull/872"
+  "0.6.4":
+    - patch_file: "patches/0.6.x-0002-install-breakpad-header.patch"
+      patch_description: "Install breakpad header"
+      patch_type: "conan"
+      patch_source: "https://github.com/getsentry/sentry-native/pull/872"
+  "0.6.3":
+    - patch_file: "patches/0.6.x-0002-install-breakpad-header.patch"
+      patch_description: "Install breakpad header"
+      patch_type: "conan"
+      patch_source: "https://github.com/getsentry/sentry-native/pull/872"
+  "0.5.4":
+    - patch_file: "patches/0.5.4-0002-install-breakpad-header.patch"
+      patch_description: "Install breakpad header"
+      patch_type: "conan"
+      patch_source: "https://github.com/getsentry/sentry-native/pull/872"
+  "0.4.18":
+    - patch_file: "patches/0.4.18-0002-install-breakpad-header.patch"
+      patch_description: "Install breakpad header"
+      patch_type: "conan"
+      patch_source: "https://github.com/getsentry/sentry-native/pull/872"
