[date] Add tz recipe as dependency
* Initial implementation adding tz recipe as a dependency
* Apply patch from PR date#611 to add ability to specify tz database by
  environment variable and also enable the binary tz database to be
  parsed on windows
* Deprecate use_system_tz_db in favour of "with_tzdb" option to handle
  all mutually exclusive options
* Add with_db_format option to provide flexibility in how the tz recipe
  is consumed

--- a/recipes/date/all/conandata.yml
+++ b/recipes/date/all/conandata.yml
@@ -13,6 +13,10 @@ patches:
     - patch_file: "patches/cmake-3.0.1.patch"
       patch_description: "Disable string view to workaround clang 5 not having it"
       patch_type: "portability"
+    - patch_file: "patches/load-tzdb-from-envvar-and-windows-binary-db-support-3.0.1.patch"
+      patch_description: "Allow TZDB to be loaded by envvar and add ability for windows to read zic-compiled binary db"
+      patch_type: "portability"
+      patch_source: "https://github.com/HowardHinnant/date/pull/611"
   "3.0.0":
     - patch_file: "patches/cmake-3.0.0.patch"
       patch_description: "Disable string view to workaround clang 5 not having it"
