Improve some includes and if-conditions

--- a/recipes/openimageio/all/test_package/CMakeLists.txt
+++ b/recipes/openimageio/all/test_package/CMakeLists.txt
@@ -4,4 +4,4 @@ project(test_package CXX)
 find_package(OpenImageIO REQUIRED CONFIG)
 
 add_executable(${PROJECT_NAME} test_package.cpp)
-target_link_libraries(${PROJECT_NAME} OpenImageIO::OpenImageIO)
+target_link_libraries(${PROJECT_NAME} OpenImageIO::OpenImageIO fmt::fmt)
