--- a/recipes/openimageio/all/test_package/CMakeLists.txt
+++ b/recipes/openimageio/all/test_package/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.15)
 project(test_package CXX)
 
 find_package(OpenImageIO REQUIRED CONFIG)
 
 add_executable(${PROJECT_NAME} test_package.cpp)
-target_link_libraries(${PROJECT_NAME} OpenImageIO::OpenImageIO fmt::fmt)
+target_link_libraries(${PROJECT_NAME} PRIVATE OpenImageIO::OpenImageIO fmt::fmt)
