--- a/recipes/jwt-cpp/all/test_v1_package/CMakeLists.txt
+++ b/recipes/jwt-cpp/all/test_v1_package/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.1)
 project(test_package)
 
-include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+include("${CMAKE_BINARY_DIR}/conanbuildinfo.cmake")
 conan_basic_setup(TARGETS)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../test_package/
