--- a/recipes/folly/all/conandata.yml
+++ b/recipes/folly/all/conandata.yml
@@ -5,14 +5,5 @@ sources:
 patches:
   "2022.10.31.00":
     - patch_file: "patches/0017-compiler-flags.patch"
-      patch_description: "fix the hard-coded flag"
-      patch_type: "conan"
-    - patch_file: "patches/0019-exclude-example.patch"
-      patch_description: "exclude example"
-      patch_type: "conan"
-    - patch_file: "patches/0025-find-packages.patch"
-      patch_description: "fix cmake find_package"
-      patch_type: "conan"
-    - patch_file: "patches/0026-fix-windows-minmax.patch"
-      patch_description: "fix cmake script on window"
+      patch_description: "Do not hard-code debug flag for all build types"
       patch_type: "conan"
