--- a/recipes/copypp/all/test_package/CMakeLists.txt
+++ b/recipes/copypp/all/test_package/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
 project(test_package LANGUAGES CXX)
 
-find_package(copypp REQUIRED CONFIG)
+find_package(copypp CONFIG REQUIRED)
 
 add_executable(${PROJECT_NAME} test_package.cpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE icurve::copypp)
