feat: package creation under linux and conan 2.0

--- a/recipes/cuda-sdk/all/test_package/CMakeLists.txt
+++ b/recipes/cuda-sdk/all/test_package/CMakeLists.txt
@@ -2,9 +2,7 @@ cmake_minimum_required(VERSION 3.1)
 
 project(test_package)
 
-include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-conan_basic_setup()
-find_package(CUDASDK REQUIRED)
 enable_language(CUDA)
+find_package(CUDAToolkit)
 add_executable(${PROJECT_NAME} test_package.cu)
-target_link_libraries(${PROJECT_NAME} PRIVATE CUDASDK::cudart_static)
+target_link_libraries(${PROJECT_NAME} PRIVATE CUDA::cudart CUDA::curand)
