--- a/recipes/mocknetworkaccessmanager/all/conandata.yml
+++ b/recipes/mocknetworkaccessmanager/all/conandata.yml
@@ -7,4 +7,4 @@ patches:
     - patch_file: "patches/0.12.0-0001-add-install-step.patch"
       patch_description: "Add install step"
       patch_type: "conan"
-      patch_source: "TODO"
+      patch_source: "https://gitlab.com/julrich/MockNetworkAccessManager/-/merge_requests/75"
