refactor: update package information

--- a/recipes/cuda-toolkit/all/test_package/CMakeLists.txt
+++ b/recipes/cuda-toolkit/all/test_package/CMakeLists.txt
@@ -5,4 +5,4 @@ project(test_package)
 enable_language(CUDA)
 find_package(CUDAToolkit)
 add_executable(${PROJECT_NAME} test_package.cu)
-target_link_libraries(${PROJECT_NAME} PRIVATE CUDA::cudart CUDA::curand)
+target_link_libraries(${PROJECT_NAME} PRIVATE CUDA::cudart)
