--- a/recipes/gettext/all/test_package/CMakeLists.txt
+++ b/recipes/gettext/all/test_package/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.15)
 project(test_package LANGUAGES CXX)
 
 find_package(Intl REQUIRED CONFIG)
+find_package(Gettext REQUIRED)
 
 add_executable(${PROJECT_NAME} test_package.cpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE Intl::Intl)
