--- a/recipes/nvcc/all/test_package/CMakeLists.txt
+++ b/recipes/nvcc/all/test_package/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.1)
 project(test_package)
 
 enable_language(CUDA)
+find_package(nvcc)
 
 add_executable(${PROJECT_NAME} test_package.cu)
 target_link_libraries(${PROJECT_NAME} PRIVATE CUDA::cudart)
