gdal: split two unrelated patches

--- a/recipes/gdal/post_3.5.0/conandata.yml
+++ b/recipes/gdal/post_3.5.0/conandata.yml
@@ -13,20 +13,29 @@ patches:
     - patch_file: "patches/3.8.1/0-replace-find-package.patch"
       patch_description: "Use custom version of find_package() for Conan deps"
       patch_type: "conan"
-    - patch_file: "patches/3.8.1/1-fix-recursive-targets.patch"
-      patch_description: "Fix CMake failure due to recursive CMakeDeps Conan targets"
+    - patch_file: "patches/3.7.3/1-do-not-force-private-linking.patch"
+      patch_description: "Fix private linking not working for some Conan dependencies"
+      patch_type: "conan"
+    - patch_file: "patches/3.7.3/2-allow-cycles-in-cmake-targets.patch"
+      patch_description: "Fix CMake failure due to cyclical dependencies in CMakeDeps targets"
       patch_type: "conan"
   "3.7.3":
     - patch_file: "patches/3.7.3/0-replace-find-package.patch"
       patch_description: "Use custom version of find_package() for Conan deps"
       patch_type: "conan"
-    - patch_file: "patches/3.7.3/1-fix-recursive-targets.patch"
-      patch_description: "Fix CMake failure due to recursive CMakeDeps Conan targets"
+    - patch_file: "patches/3.7.3/1-do-not-force-private-linking.patch"
+      patch_description: "Fix private linking not working for some Conan dependencies"
+      patch_type: "conan"
+    - patch_file: "patches/3.7.3/2-allow-cycles-in-cmake-targets.patch"
+      patch_description: "Fix CMake failure due to cyclical dependencies in CMakeDeps targets"
       patch_type: "conan"
   "3.5.2":
     - patch_file: "patches/3.5.2/0-replace-find-package.patch"
       patch_description: "Use custom version of find_package() for Conan deps"
       patch_type: "conan"
-    - patch_file: "patches/3.5.2/1-fix-recursive-targets.patch"
-      patch_description: "Fix CMake failure due to recursive CMakeDeps Conan targets"
+    - patch_file: "patches/3.5.2/1-do-not-force-private-linking.patch"
+      patch_description: "Fix private linking not working for some Conan dependencies"
+      patch_type: "conan"
+    - patch_file: "patches/3.5.2/2-allow-cycles-in-cmake-targets.patch"
+      patch_description: "Fix CMake failure due to cyclical dependencies in CMakeDeps targets"
       patch_type: "conan"
