--- a/recipes/libsrtp/all/test_package/CMakeLists.txt
+++ b/recipes/libsrtp/all/test_package/CMakeLists.txt
@@ -4,4 +4,4 @@ project(test_package LANGUAGES C)
 find_package(libsrtp REQUIRED CONFIG)
 
 add_executable(test_package test_package.c)
-target_link_libraries(test_package PRIVATE libsrtp::libsrtp)
+target_link_libraries(test_package PRIVATE libsrtp)
