--- a/recipes/libsrtp/all/test_v1_package/CMakeLists.txt
+++ b/recipes/libsrtp/all/test_v1_package/CMakeLists.txt
@@ -7,5 +7,4 @@ conan_basic_setup(TARGETS)
 find_package(libsrtp REQUIRED CONFIG)
 
 add_executable(${PROJECT_NAME} ../test_package/test_package.c)
-target_link_libraries(${PROJECT_NAME} PRIVATE libsrtp)
-#target_include_directories(${PROJECT_NAME} PRIVATE ${libsrtp_INCLUDE_DIR})
+target_link_libraries(${PROJECT_NAME} PRIVATE libsrtp::libsrtp)
