--- a/recipes/glew/all/conandata.yml
+++ b/recipes/glew/all/conandata.yml
@@ -10,6 +10,9 @@ patches:
     - patch_file: "patches/0001-fix-cmake-2.2.0.patch"
       patch_description: "Fix CMake: cmake_minimum_required() before project()"
       patch_type: conan
+    - patch_file: "patches/0003-fix-compilation-on-iOSSimulator.patch"
+      patch_description: "Fix building on iOSSimulator"
+      patch_type: "HxGN-CV-DT"
   "2.1.0":
     - patch_file: "patches/0001-fix-cmake-2.1.0.patch"
       patch_description: "Fix CMake: cmake_minimum_required() before project()"
