restore qt patch

--- a/recipes/opencv/4.x/conandata.yml
+++ b/recipes/opencv/4.x/conandata.yml
@@ -27,6 +27,9 @@ patches:
     - patch_file: "patches/4.5.5-0003-find-quirc.patch"
       patch_description: "Robust discovery & injection of quirc"
       patch_type: "conan"
+    - patch_file: "patches/4.8.1-0004-link-qt-targets.patch"
+      patch_description: "Link to Qt through CMake targets"
+      patch_type: "conan"
     - patch_file: "patches/4.8.1-0001-find-ade.patch"
       patch_description: "Robust discovery & injection of ade"
       patch_type: "conan"
