refactor: check using conan hooks

--- a/recipes/nvcc/all/test_package/CMakeLists.txt
+++ b/recipes/nvcc/all/test_package/CMakeLists.txt
@@ -3,7 +3,12 @@ cmake_minimum_required(VERSION 3.1)
 project(test_package)
 
 enable_language(CUDA)
-find_package(nvcc)
+find_package(nvcc REQUIRED)
+
+# In case of conan <= 1.62
+if (NOT CUDAToolkit_NVCC_EXECUTABLE)
+    include("nvcc_toolchain")
+endif()
 
 add_executable(${PROJECT_NAME} test_package.cu)
 target_link_libraries(${PROJECT_NAME} PRIVATE CUDA::cudart)
