--- a/recipes/libcoro/all/conandata.yml
+++ b/recipes/libcoro/all/conandata.yml
@@ -17,8 +17,9 @@ patches:
       patch_type: "conan"
       patch_description: "Allow to build the library as a shared library"
     - patch_file: "patches/0.10-0002-disable-git-config.patch"
-      patch_type: "conan"
+      patch_type: "official"
       patch_description: "Comment out invocation of git config command"
+      patch_source: "https://github.com/jbaldwin/libcoro/pull/234"
   "0.9":
     - patch_file: "patches/0.9-0001-allow-shared-lib.patch"
       patch_type: "conan"
