[date] Add tz recipe as a dependency
* Add tz recipe as a dependency to provide a way of easily
  consuming/maintaining and upgrading the timezone database
* Apply patch from HowardHinnant/date#807 to add the ability to specify
  the tz database by environment variable
* Deprecate `use_system_tz_db` in favour of `with_tzdb` option to handle
  all mutually exclusive options
* Add `with_db_format` option to provide flexibility in how the tz
  package is consumed.

This implementation superesedes #16285 and #21719. In the case of #21719,
it turned out that HowardHinnant/date#611 was not mature enough to
provide the ability for the date library to read zic-compiled binary
variants of the tzdb on Windows. To take an iterative approach, this PR
aims to extract the elements that worked from #21719, which was the use
of an environment variable to inject the conan packaged tz database.

Use of a binary database has been marked as an invalid configuration on
Windows. This functionality can be added at a later date.

This pull request is blocked on #21671, which packages the source
database in the tz recipe and makes this the default configuration since
this is the only database that can be parsed consistently on all major
platforms.

Closes #16204

--- a/recipes/date/all/conandata.yml
+++ b/recipes/date/all/conandata.yml
@@ -13,10 +13,18 @@ patches:
     - patch_file: "patches/cmake-3.0.1.patch"
       patch_description: "Disable string view to workaround clang 5 not having it"
       patch_type: "portability"
+    - patch_file: "patches/load-tzdb-from-envvar-3.0.x.patch"
+      patch_description: "Allow TZDB to be loaded from the TZDATA environment variable"
+      patch_type: "portability"
+      patch_source: "https://github.com/HowardHinnant/date/pull/807"
   "3.0.0":
     - patch_file: "patches/cmake-3.0.0.patch"
       patch_description: "Disable string view to workaround clang 5 not having it"
       patch_type: "portability"
+    - patch_file: "patches/load-tzdb-from-envvar-3.0.x.patch"
+      patch_description: "Allow TZDB to be loaded from the TZDATA environment variable"
+      patch_type: "portability"
+      patch_source: "https://github.com/HowardHinnant/date/pull/807"
   "2.4.1":
     - patch_file: "patches/0001-fix-uwp.patch"
       patch_description: "Fix Universal Windows Platform (UWP) unhandled exception support. See https://github.com/microsoft/vcpkg/pull/8151#issuecomment-531175393."
@@ -27,3 +35,7 @@ patches:
     - patch_file: "patches/string_view.patch"
       patch_description: "Disable string view to workaround clang 5 not having it"
       patch_type: "portability"
+    - patch_file: "patches/load-tzdb-from-envvar-2.4.1.patch"
+      patch_description: "Allow TZDB to be loaded from the TZDATA environment variable"
+      patch_type: "portability"
+      patch_source: "https://github.com/HowardHinnant/date/pull/807"
