--- a/recipes/onedpl/all/test_package/CMakeLists.txt
+++ b/recipes/onedpl/all/test_package/CMakeLists.txt
@@ -5,4 +5,8 @@ find_package(ParallelSTL REQUIRED CONFIG)
 
 add_executable(${PROJECT_NAME} test_package.cpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE pstl::ParallelSTL)
-target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_11)
+if (ParallelSTL_VERSION VERSION_GREATER_EQUAL "2021.7")
+    target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
+else()
+    target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_11)
+endif()
