embree3: add cxx_std_11 to test_package

--- a/recipes/embree3/all/test_package/CMakeLists.txt
+++ b/recipes/embree3/all/test_package/CMakeLists.txt
@@ -5,3 +5,4 @@ find_package(embree REQUIRED CONFIG)
 
 add_executable(${PROJECT_NAME} test_package.v${embree_VERSION_MAJOR}.cpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE embree)
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_11)
