--- a/recipes/opencolorio/all/conandata.yml
+++ b/recipes/opencolorio/all/conandata.yml
@@ -19,6 +19,10 @@ patches:
     - patch_file: "patches/2.3.1-0001-fix-cmake-source-dir-and-targets.patch"
       patch_description: "use cci package, use PROJECT_BINARY_DIR/PROJECT_SOURCE_DIR"
       patch_type: "conan"
+    - patch_file: "patches/2.3.1-0002-portability-patches.patch"
+      patch_description: "fix include path for pystring & namespace for strlen"
+      patch_type: "portability"
+      patch_source: "https://github.com/AcademySoftwareFoundation/OpenColorIO/pull/1930"
   "2.3.0":
     - patch_file: "patches/2.3.0-0001-fix-cmake-source-dir-and-targets.patch"
       patch_description: "use cci package, use PROJECT_BINARY_DIR/PROJECT_SOURCE_DIR"
