OpenColorIO 2.3.1 & attempted fix for test package

--- a/recipes/openimageio/all/test_package/CMakeLists.txt
+++ b/recipes/openimageio/all/test_package/CMakeLists.txt
@@ -5,4 +5,6 @@ find_package(OpenImageIO REQUIRED CONFIG)
 find_package(fmt REQUIRED CONFIG)
 
 add_executable(${PROJECT_NAME} test_package.cpp)
-target_link_libraries(${PROJECT_NAME} PRIVATE OpenImageIO::OpenImageIO fmt::fmt)
+target_link_libraries(${PROJECT_NAME} PRIVATE OpenImageIO::OpenImageIO
+                                              OpenImageIO::OpenImageIO_Util
+                                              fmt::fmt)
