--- a/recipes/rotor/config.yml
+++ b/recipes/rotor/config.yml
@@ -1,9 +1,11 @@
 versions:
-  "0.21":
+  "0.26":
     folder: all
-  "0.23":
+  "0.25":
     folder: all
   "0.24":
     folder: all
-  "0.25":
+  "0.23":
+    folder: all
+  "0.21":
     folder: all
