--- a/recipes/openscenegraph/all/CMakeLists.txt
+++ b/recipes/openscenegraph/all/CMakeLists.txt
@@ -17,7 +17,7 @@ macro(custom_find_package name variable)
         set(${name_upper}_DEFINITIONS ${${name}_DEFINITIONS})
         unset(name_upper)
     else()
-        set(CMAKE_DISABLE_FIND_PACKAGE_${name} TRUE)
+        #set(CMAKE_DISABLE_FIND_PACKAGE_${name} TRUE)
         set(${name}_FOUND FALSE)
         set(${name_upper}_FOUND FALSE)
     endif()
