--- a/recipes/c-ares/config.yml
+++ b/recipes/c-ares/config.yml
@@ -1,4 +1,10 @@
 versions:
+  "1.25.0":
+    folder: all
+  "1.24.0":
+    folder: all
+  "1.23.0":
+    folder: all
   "1.22.1":
     folder: all
   "1.22.0":
