--- a/recipes/mocknetworkaccessmanager/all/conandata.yml
+++ b/recipes/mocknetworkaccessmanager/all/conandata.yml
@@ -8,3 +8,7 @@ patches:
       patch_description: "Add install step"
       patch_type: "conan"
       patch_source: "https://gitlab.com/julrich/MockNetworkAccessManager/-/merge_requests/75"
+    - patch_file: "patches/0.12.0-0002-fix-target-without-location.patch"
+      patch_description: "Fix target without location"
+      patch_type: "conan"
+      patch_source: "https://gitlab.com/julrich/MockNetworkAccessManager/-/merge_requests/75"
