libunifex: fix a MSVC build issue

--- a/recipes/libunifex/all/test_package/CMakeLists.txt
+++ b/recipes/libunifex/all/test_package/CMakeLists.txt
@@ -5,4 +5,8 @@ find_package(unifex REQUIRED CONFIG)
 
 add_executable(${PROJECT_NAME} test_package.cpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE unifex::unifex)
-set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
+if(MSVC)
+    set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)
+else()
+    set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
+endif()
