--- a/recipes/cpython/all/test_package/CMakeLists.txt
+++ b/recipes/cpython/all/test_package/CMakeLists.txt
@@ -69,7 +69,7 @@ if(BUILD_MODULE)
     )
     set_property(TARGET spam PROPERTY PREFIX "")
     if(MSVC)
-        if(CONAN_SETTINGS_BUILD_TYPE STREQUAL "Debug")
+        if(CMAKE_BUILD_TYPE STREQUAL "Debug")
             set(SUFFIX "_d.pyd")
         else()
             set(SUFFIX ".pyd")
