--- a/recipes/ruby/all/conandata.yml
+++ b/recipes/ruby/all/conandata.yml
@@ -5,10 +5,14 @@ sources:
 patches:
   "3.1.0":
     - patch_file: "patches/0001-darwin-includedir.patch"
+      patch_description: "Remove SDKROOT on macOS"
       patch_type: "portability"
     - patch_file: "patches/0002-remove-fpic.patch"
+      patch_description: "Remove hardcoded fPIC"
       patch_type: "portability"
     - patch_file: "patches/0003-openssl-zlib-ext.patch"
+      patch_description: "Handle naming of zlib and openssl"
       patch_type: "conan"
     - patch_file: "patches/0004-windows-cflags.patch"
+      patch_description: "Define cflags properly on windows"
       patch_type: "portability"
