--- a/recipes/openscenegraph/all/conandata.yml
+++ b/recipes/openscenegraph/all/conandata.yml
@@ -21,4 +21,6 @@ patches:
       patch_source: https://github.com/openscenegraph/OpenSceneGraph/pull/1246
     - patch_file: patches/0011-remove-deprecated-register.patch
       patch_type: portability
-      patch_source: [https://github.com/openscenegraph/OpenSceneGraph/pull/1296, https://github.com/openscenegraph/OpenSceneGraph/pull/951]
+      patch_source: 
+        - https://github.com/openscenegraph/OpenSceneGraph/pull/1296
+        - https://github.com/openscenegraph/OpenSceneGraph/pull/951
