--- a/recipes/boost/all/test_package/CMakeLists.txt
+++ b/recipes/boost/all/test_package/CMakeLists.txt
@@ -26,6 +26,7 @@ if(NOT HEADER_ONLY)
         find_package(Boost COMPONENTS regex REQUIRED)
         add_executable(regex_exe regex.cpp)
         target_link_libraries(regex_exe PRIVATE Boost::regex)
+        set_property(TARGET regex_exe PROPERTY CXX_STANDARD 11)
         add_test(NAME boost_regex COMMAND regex_exe)
     endif()
 
@@ -78,6 +79,7 @@ if(NOT HEADER_ONLY)
         find_package(Boost COMPONENTS locale REQUIRED)
         add_executable(locale_exe locale.cpp)
         target_link_libraries(locale_exe PRIVATE Boost::locale)
+        set_property(TARGET locale_exe PROPERTY CXX_STANDARD 11)
         add_test(NAME boost_locale COMMAND locale_exe)
     endif()
 
