--- a/recipes/libpng/all/test_package/CMakeLists.txt
+++ b/recipes/libpng/all/test_package/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.15)
 project(test_package LANGUAGES C)
 
-find_package(PNG REQUIRED)
+find_package(PNG REQUIRED CONFIG)
 
 add_executable(${PROJECT_NAME} test_package.c)
 target_link_libraries(${PROJECT_NAME} PRIVATE PNG::PNG)
