--- a/recipes/wxwidgets/all/conandata.yml
+++ b/recipes/wxwidgets/all/conandata.yml
@@ -1,4 +1,8 @@
 sources:
   "3.2.1":
-    url: "https://github.com/wxWidgets/wxWidgets/releases/download/v3.2.1/wxWidgets-3.2.1.tar.bz2"
-    sha1: "b5299275abddc7cb5fa92f75c17475ade3bc0532"
+    "win32":
+      url: "https://github.com/wxWidgets/wxWidgets/releases/download/v3.2.1/wxWidgets-3.2.1.zip"
+      sha1: "b0323a4771415faf1488d284079bdfc56a3586c2"
+    "linux":
+      url: "https://github.com/wxWidgets/wxWidgets/releases/download/v3.2.1/wxWidgets-3.2.1.tar.bz2"
+      sha1: "b5299275abddc7cb5fa92f75c17475ade3bc0532"
