--- a/recipes/cpython/config.yml
+++ b/recipes/cpython/config.yml
@@ -1,11 +1,15 @@
 versions:
-  "3.10.0":
+  "3.12.1":
     folder: "all"
-  "3.9.7":
+  "3.11.7":
     folder: "all"
-  "3.8.12":
+  "3.10.13":
     folder: "all"
-  "3.7.12":
+  "3.9.18":
+    folder: "all"
+  "3.8.18":
+    folder: "all"
+  "3.7.17":
     folder: "all"
   "2.7.18":
     folder: "all"
