--- a/.c3i/config_v2.yml
+++ b/.c3i/config_v2.yml
@@ -48,6 +48,7 @@ tasks:
     detailed_status_checks: false
     write_comments: false
     update_labels: false
+    build_bump_deps_pr: false
     user_feedback:
       title: "Conan v2 pipeline"
       description: "> **Note**: Conan v2 builds are now mandatory. Please read our [discussion](https://github.com/conan-io/conan-center-index/discussions/19104) about it."
